systemd: make sure journal entry properties don't overflow
Preserving the full string is crutial for tracking down an issue.

Fixes #3818
Closes #3836

--- a/pkg/systemd/journal.css
+++ b/pkg/systemd/journal.css
@@ -131,3 +131,8 @@
     white-space: nowrap;
     vertical-align: middle;
 }
+
+/* Make sure to not break log message lines in order to preserve information */
+#journal-entry .cockpit-info-table td {
+    white-space: normal;
+}
